@@ -58,11 +58,13 @@ static GConfValue *
 toolbar_to_widget (GConfPropertyEditor *peditor, GConfValue *value) 
 {
   GConfValue *new_value;
+  const gchar *str;
   gint val = 2;
 
+  str = (value && (value->type == GCONF_VALUE_STRING)) ? gconf_value_get_string (value) : NULL;
   new_value = gconf_value_new (GCONF_VALUE_INT);
   gconf_string_to_enum (toolbar_style_enums,
-			gconf_value_get_string (value),
+			str,
 			&val);
   gconf_value_set_int (new_value, val);
 
