@@ -1,3 +1,7 @@
+2002-03-21  Lauris Kaplinski  <lauris@ximian.com>
+
+	* gnome-ui-properties.c (toolbar_to_widget): Check GConf value type
+
 2002-03-21  Dave Camp  <dave@ximian.com>
 
 	* gnome-ui-properties.c: (show_handlebar), (set_toolbar_style),
