@@ -1,3 +1,8 @@
+2002-03-26  Lauris Kaplinski  <lauris@ximian.com>
+
+	* gnome-keyboard-properties.c (bell_to_widget): Be nice on
+	invalid and NULL Gconf values
+
 2002-03-25  Jody Goldberg <jody@gnome.org>
 
 	* gnome-keyboard-properties.c (volume_to_widget) : new.
